<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogEmailInputLayout"
        style="@style/OutlinedField"
        android:layout_marginBottom="12dp"
        android:hint="@string/email_hint"
        app:startIconDrawable="@drawable/ic_lucide_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogPasswordInputLayout"
        style="@style/OutlinedField"
        android:layout_marginBottom="12dp"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lucide_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogServerUrlInputLayout"
        style="@style/OutlinedField"
        android:layout_marginBottom="16dp"
        android:hint="@string/server_url_hint"
        app:startIconDrawable="@drawable/ic_link_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogServerUrlInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
